@startuml machwave.states
!pragma useIntermediatePackages false

abstract class machwave.states.base.State {
}
class machwave.states.ballistics._1dof.Ballistic1DState {
  rocket: Rocket
  atmosphere: Atmosphere
  rail_length: float
  motor_dry_mass: float
  initial_elevation_amsl: float
  t: None
  P_ext: None
  rho_air: None
  g: None
  vehicle_mass: None
  y: None
  v: None
  acceleration: None
  mach_no: None
  velocity_out_of_rail: None
}
abstract class machwave.states.ballistics.base.BallisticState {
}
abstract class machwave.states.internal_ballistics.base.MotorState {
  motor: Motor
  t: None
  m_prop: None
  P_0: None
  P_exit: None
  C_f: None
  C_f_ideal: None
  thrust: None
  _thrust_time: None
  end_thrust: None
  end_burn: None
}
class machwave.states.internal_ballistics.liquid_engine.LiquidEngineState {
  motor: machwave.models.propulsion.motors.liquid.LiquidEngine {static}
  oxidizer_mass: None
  fuel_mass: None
  n_cf: None
  fuel_tank_pressure: None
  oxidizer_tank_pressure: None
}
class machwave.states.internal_ballistics.solid_motor.SolidMotorState {
  motor: SolidMotor
  V_0: None
  web: None
  burn_area: None
  propellant_volume: None
  burn_rate: None
  eta_div: None
  eta_kin: None
  eta_bl: None
  eta_2p: None
  nozzle_efficiency: None
  overall_efficiency: None
}
machwave.states.ballistics.base.BallisticState <|-- machwave.states.ballistics._1dof.Ballistic1DState
machwave.states.base.State <|-- machwave.states.ballistics.base.BallisticState
machwave.states.base.State <|-- machwave.states.internal_ballistics.base.MotorState
machwave.states.internal_ballistics.base.MotorState <|-- machwave.states.internal_ballistics.liquid_engine.LiquidEngineState
machwave.states.internal_ballistics.base.MotorState <|-- machwave.states.internal_ballistics.solid_motor.SolidMotorState
footer Generated by //py2puml//
@enduml

